--- a/app/globals.css
+++ b/app/globals.css
@@ -67,13 +67,11 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
-}
 
-@layer base {
-  * {
-    @apply border-border;
+  .glassmorphism{
+    background: rgba (255,255,255,0.25);
+    backdrop-filter:blur(4px);
+    -webkit-backdrop-filter: blur(4px)
   }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
+};
+
